<resources>
    <string name="app_name">The Killjoy App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_button_1_text">LINEUPS</string>
    <string name="menu_button_2_text">ABILITIES</string>
    <string name="menu_button_3_text">HIDDEN GRENADES</string>
    <string name="menu_button_4_text">OTHER NOTES</string>

    <string name="maps_button_1_text">Ascent</string>
    <string name="maps_button_2_text">Split</string>
    <string name="maps_button_3_text">Haven</string>
    <string name="maps_button_4_text">Bind</string>
    <string name="maps_button_5_text">Icebox</string>
    <string name="maps_button_6_text">Breeze</string>
    <string name="back">Back</string>
    <string name="maps_button_7_text">Fracture</string>
    <string name="about_author_text">The author is a second-year software engineering student. This app was her first (experimental) project for Android mobile devices using Android Studio (Java). Her work can be found on
        <a href="https://github.com/Destiny-02">github.com/Destiny-02</a>.
    </string>
    <string name="sources_text">
        C9 Keooh: <a href="https://www.youtube.com/c/Keeoh/about">https://www.youtube.com/c/Keeoh/about</a>\n
        SkillCapped Valorant Tips Tricks and Guides: <a href="https://www.youtube.com/channel/UCre4LlH_zPpgeUVvBGCMqcA/about">https://www.youtube.com/channel/UCre4LlH_zPpgeUVvBGCMqcA/about</a>\n
        VALORANT Wiki: <a href="https://valorant.fandom.com/wiki/Killjoy">https://valorant.fandom.com/wiki/Killjoy</a>\n
        Brush: <a href="https://www.youtube.com/c/BrushGG/about">https://www.youtube.com/c/BrushGG/about</a>\n
    </string>

</resources>