<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/maps_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_1_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/maps_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_2_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/maps_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_3_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/maps_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_4_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/maps_button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_5_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/maps_button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_6_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/maps_button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_7_text" />
        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>